--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="murphverse.css">
-    <title>MurphVerse</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <title>The Murphverse - Pokémon Challenges and Tournaments</title>
 </head>
 <body>
     <header>
@@ -12,7 +15,7 @@
     </header>
 
     <section class="frlg-content">
-        <h2>Fire Red Leaf Green Modes</h2>
+        <h2 class="red-text" style="color: red;";>Fire Red Leaf Green Modes</h2>
         <article>
             <a href="/Murphmon/readme.md">Murphmon</a>
             <div class="difficulty">
@@ -46,7 +49,7 @@
     </section>
 
     <section class="emerald-content">
-        <h2>Emerald Modes</h2>
+        <h2 class="green-text" style="color: green;">Emerald Modes</h2>
         <article>
             <a href="/Emerald-Murphmon/readme.md">Murphmon</a>
             <div class="difficulty">
@@ -71,7 +74,7 @@
     </section>
 
     <section class="tournaments">
-        <h2>Murphverse Tournaments</h2>
+        <h2 class="blue-text" style="color: blue;">Murphverse Tournaments</h2>
         <a href="/MurphLeague-2025/README.md">MurphLeague</a>
         <a href="/Murphmon-T1-Tourney-2025/readme.md">Murphmon: T1 Tourney 2025</a>
     </section>
