--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <section class="frlg-content">
-        <h2 class="red-text" style="color: red;";>Fire Red Leaf Green Modes</h2>
+        <h2 class="red-text" style="color: red;";>Fire Red Modes</h2>
         <article>
             <a href="/Murphmon/readme.md">Murphmon</a>
             <div class="difficulty">
